# pilcd0

./: README.md  pyproject.toml
samples/: Memo.md  eyes1.py  face1.py  face2.py  pil_animation_utils.py  st7789v_driver.py  test1.py  test2.py  test3.py
src/pilcd0/: __init__.py
